(images) Fix occasional issue with video height on mobile

--- a/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer.component.scss
@@ -235,6 +235,7 @@ $globalLoadingIndicatorHeight: 6px;
 
       @media (max-width: $portraitLayoutBreakpoint) and (max-aspect-ratio: $maxAspectRatio) {
         width: 100%;
+        min-height: calc(50vh - 3rem);
         max-height: calc(70vh - 3rem);
         height: unset;
         flex-direction: column;
@@ -393,12 +394,12 @@ $globalLoadingIndicatorHeight: 6px;
 
         .video-js {
           width: 100%;
-          height: 100% !important;
+          height: 100%;
           max-width: 100%;
           max-height: 100%;
 
           video {
-            height: 100% !important;
+            height: 100%;
             max-height: 100%;
             object-fit: contain;
           }
